; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/dev/ath/ath_hal/ar9300/extr_ar9300_misc.c_ar9300_set_antenna_switch.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/dev/ath/ath_hal/ar9300/extr_ar9300_misc.c_ar9300_set_antenna_switch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ath_hal = type { i32 }
%struct.ieee80211_channel = type { i32 }
%struct.ath_hal_9300 = type { i32 }

@AH_TRUE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ar9300_set_antenna_switch(%struct.ath_hal* %0, i32 %1, %struct.ieee80211_channel* %2, i32* %3, i32* %4, i32* %5) #0 {
  %7 = alloca %struct.ath_hal*, align 8
  %8 = alloca i32, align 4
  %9 = alloca %struct.ieee80211_channel*, align 8
  %10 = alloca i32*, align 8
  %11 = alloca i32*, align 8
  %12 = alloca i32*, align 8
  %13 = alloca %struct.ath_hal_9300*, align 8
  store %struct.ath_hal* %0, %struct.ath_hal** %7, align 8
  store i32 %1, i32* %8, align 4
  store %struct.ieee80211_channel* %2, %struct.ieee80211_channel** %9, align 8
  store i32* %3, i32** %10, align 8
  store i32* %4, i32** %11, align 8
  store i32* %5, i32** %12, align 8
  %14 = load %struct.ath_hal*, %struct.ath_hal** %7, align 8
  %15 = call %struct.ath_hal_9300* @AH9300(%struct.ath_hal* %14)
  store %struct.ath_hal_9300* %15, %struct.ath_hal_9300** %13, align 8
  %16 = load i32, i32* %8, align 4
  %17 = load %struct.ath_hal_9300*, %struct.ath_hal_9300** %13, align 8
  %18 = getelementptr inbounds %struct.ath_hal_9300, %struct.ath_hal_9300* %17, i32 0, i32 0
  store i32 %16, i32* %18, align 4
  %19 = load i32, i32* @AH_TRUE, align 4
  ret i32 %19
}

declare dso_local %struct.ath_hal_9300* @AH9300(%struct.ath_hal*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
